Correcting float values commit

--- a/templates/model_Diabetes.html
+++ b/templates/model_Diabetes.html
@@ -87,10 +87,10 @@
         <input type="number" name="Insulin" required>
 
         <label>BMI</label>
-        <input type="number" name="BMI"  required>
+        <input type="number" name="BMI" step="any" required>
 
         <label>Diabetes Pedigree Function</label>
-        <input type="number" name="DiabetesPedigreeFunction"  required>
+        <input type="number" name="DiabetesPedigreeFunction" step="any" required>
 
         <label>Age</label>
         <input type="number" name="Age" required>
